/**
现在就等福特！Yeah
gRPC是谷歌推出的基于HTTP2协议的更快速的服务端-客户端调用方式
其主要从数据连接上采用了二进制传输以及header压缩的方式
 */
syntax="proto3";
import "laptop_message.proto";
import "filter_message.proto";

/**
创建请求
 */
message CreateLaptopRequest{
  Laptop laptop =1;
}
/**
创建响应
 */
message CreateLaptopResponse{
  string id=1;
}

/**
测试client streaming
 */
message UploadImageRequest{
  oneof data{
    ImageInfo info = 1;
    bytes chunk_data=2;
  }
}
message ImageInfo{
  string laptop_id=1;
  string image_type=2;
}
message UploadImageResponse{
  string id =1;
  uint32 size=2;
}

/**
今天不仅要体检，拿毕业证，需要准备明天去YI入职，
并且要带好相关都offer上的材料，
除了这些还
要看下专升本的群里，报名入口已经开放，
时间是
9月13（周二）今日 到 9月17日（周六）
每天9点到22点（其中9月17日时间为早9点到晚8点）
需要工作证明一个
生成流水号和报考信息才算成功报名
 */
message RateLaptopRequest{
  string laptop_id = 1;
  double score = 2;
}
message RateLaptopResponse{
  string laptop_id=1;
  uint32 rated_count=2;
  double average_score=3;
}
/**
laptop相关服务
 */
service LaptopService{
  /**
  包括请求参数和返回参数
   */
  rpc createLaptop(CreateLaptopRequest) returns (CreateLaptopResponse){};
  rpc searchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse){};
  rpc uploadImage(stream UploadImageRequest) returns (UploadImageResponse){};
  rpc rateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse){};
}

message SearchLaptopRequest{
  Filter filter =1;
}
message SearchLaptopResponse{
  Laptop laptop = 1;
}
